<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>pl.derwinski</groupId>
    <artifactId>vsql-morvael-avl</artifactId>
    <version>4.4.6</version>

    <properties>
        <vassal.version>3.6.19</vassal.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.vassalengine</groupId>
            <artifactId>vassal-app</artifactId>
            <version>${vassal.version}</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>vassal-releases</id>
            <url>https://vassalengine.org/maven</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                    <compilerArgs>
                        <arg>-Xlint:unchecked</arg>
                        <arg>-Xlint:deprecation</arg>
                    </compilerArgs>                    
                    <release>11</release>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
